--- a/src/Components/Navbar/navbar.scss
+++ b/src/Components/Navbar/navbar.scss
@@ -74,6 +74,7 @@
             }
             .btn{
                 margin-top: 1rem;
+                background: linear-gradient(to bottom, #ccccff 9%, #3399ff 100%);
 
                 a{
                     font-weight: 600;
