--- a/src/Components/Home/home.scss
+++ b/src/Components/Home/home.scss
@@ -63,7 +63,93 @@
                 font-size: 1.8rem;
             }
         }
+        .cardDiv{
+            position: relative;
+            padding: 2rem 1rem;
+            background: var(--whiteColor);
+            border-radius: 10px;
+            gap: 1rem;
+            
+            label{
+                display: block;
+                color: var(--textColor);
+                padding-bottom: 10px;
+                font-size: 13px;
+                font-weight: 500;
+            }
+            .lable_total{
+                justify-content: space-between;
+                align-items: center;
 
+                .total{
+                    color: var(--textColor);
+                    font-size: 18px;
+                    padding-bottom: 10px;
+                }
+            }
+            .input{
+                height: 40px;
+                padding: 0 1rem;
+                background: var(--inputColor);
+                border-radius: 3rem;
+
+                input{
+                    background: none;
+                    border: none;
+                    outline: none;
+                    width: 100%;
+                    font-size: 13px;
+                    font-weight: 500;
+                    &:placeholder{
+                        font-size: 13px;
+                    }
+                }
+                .icon{
+                    font-size: 13px;
+                    color: var(--PrimaryColor);
+                    // !important;
+                    margin-left: 10px;
+                }
+                .input[type=range]{
+                    background: blue;
+                }
+            }
+            .searchOption{
+                position: absolute;
+                background: linear-gradient(to bottom, #ccccff 9%, #3399ff 100%);
+                width: max-content;
+                bottom: -0.7rem;
+                column-gap: .8rem;
+                padding: 5px 1rem;
+                border-radius: 3rem;
+                left: 50%;
+                transform: translate(-50%);
+                cursor: pointer;
+                &:hover{
+                    background: linear-gradient(to bottom left, #0099cc 9%, #9999ff 100%);
+                }
+                .icon{
+                    font-size: 18px;
+                }
+                span{
+                    font-size: 18px;
+                }
+            }
+        }
+        .homeFooterIcons{
+            width: 100%;
+            justify-content: space-between;
+
+            .icon{
+                font-size: 20px;
+                margin: 0 5px;
+                color: var(--whiteColor);
+                font-weight: 600;
+                &:hover{
+                    color: #3399ff;
+                }
+            }
+        }
        }
    }
-   
+   //=== === == === === media quieries === === == === ===
