--- a/src/Components/Footer/footer.scss
+++ b/src/Components/Footer/footer.scss
@@ -87,6 +87,8 @@
 
                     &::placeholder{
                         color: var(--whiteColor);
+                        font-size: 15px;
+                        text-align: center;
                         opacity: .7;
                     }
                 }
@@ -99,6 +101,90 @@
 
                     .icon{
                         font-size: 18px;
+                    }
+                }
+            }
+            
+        }
+        .footerCard{
+            position: relative;
+            padding: 1rem 1rem 4rem;
+            gap: 2rem;
+            border-radius: 1rem;
+            background: var(--bodyColor);
+            width: 100%;
+            justify-content: center;
+            flex-direction: column;
+            text-align: flex-start;
+            overflow: hidden;
+
+            .footerInfo{
+                flex-basis: 50%;
+                justify-content: center;
+                align-items: flex-start;
+                flex-direction: column;
+                row-gap: .5rem;
+            }
+            .logoDiv{
+                .logo{
+                    color: var(--blackColor);
+                    font-weight: 600;
+
+                    .icon{
+                        font-size: 25px;
+                        color: var(--PrimaryColor);
+                        margin-right: 10px;
+                    }
+                }
+            }
+            .footerParagraph{
+                font-size: 13px;
+                color: var(--textColor);
+            }
+            .footerSocail{
+                column-gap: .5rem;
+
+                .icon{
+                    color: var(--blackColor);
+                    font-size: 25px;
+                    &:hover{
+                        color: var(--PrimaryColor);
+                        transition: .5s;
+                    }
+                }
+            }
+            .footerLinks{
+                flex-basis: 50%;
+                width: 100%;
+                gap: 1rem;
+                grid-template-columns: repeat(2, 1fr);
+                justify-content: space-between;
+                
+                .linkGroup{
+                    .groupTitle{
+                        display: block;
+                        font-weight: 600;
+                        color: var(--blackColor);
+                        margin-bottom: .5rem;
+                    }
+                    .footerList{
+                        font-size: 15px;
+                        color: var(--textColor);
+                        transition: .3 ease-in-out;
+                        .icon{
+                            font-size: 15px;
+                            color: var(--greyText);
+                        }
+                        &:hover{
+                            color: var(--PrimaryColor);
+                            transform: translateX(7px);
+                            transition: .5s;
+                            cursor: pointer;
+
+                            .icon{
+                                color: var(--SecondaryColor);
+                            }
+                        }
                     }
                 }
             }
